<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 Solana Labs, Inc.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolanaPayActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_entrypoint_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_entrypoint_type"
            android:textSize="12pt"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_entrypoint_type"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/tv_entrypoint_type_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_entrypoint_type_label"
            app:layout_constraintStart_toEndOf="@id/tv_entrypoint_type_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12pt" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_source_verification_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_entrypoint_type_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_source_verification"
            android:textSize="12pt"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_source_verification"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/tv_source_verification_label"
            app:layout_constraintBottom_toBottomOf="@id/tv_source_verification_label"
            app:layout_constraintStart_toEndOf="@id/tv_source_verification_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="12pt" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_solana_pay_uri_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_source_verification_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_solana_pay_uri"
            android:textSize="12pt"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_solana_pay_uri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@id/tv_solana_pay_uri_label"
            app:layout_constraintStart_toEndOf="@id/tv_solana_pay_uri_label"
            app:layout_constraintEnd_toEndOf="parent"
            android:minLines="2"
            android:textSize="12pt" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_simulation_options_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_solana_pay_uri"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_simulation_options"
            android:textSize="12pt"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simulate_authorize_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_simulation_options_label"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_simulate_authorize_submit"
            android:textSize="10pt" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simulate_authorize_but_submit_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_simulate_authorize_submit"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_simulate_authorize_but_submit_error"
            android:textSize="10pt" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simulate_not_authorized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_simulate_authorize_but_submit_error"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_simulate_not_authorized"
            android:textSize="10pt" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_simulate_wallet_rejects_transaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_simulate_not_authorized"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/label_simulate_wallet_rejects_transaction"
            android:textSize="10pt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>